# EPS-XARXES-Sockets

./: CMakeLists.txt  cfgloader.c  cfgloader.h  client  client.c  makefile  server.py  servidor.py
cli/: client.c  client2.cfg  client4.cfg  client_meu
cli/modules/: alive.c  conexions.c  config.c  pdu.c  register.c  sendrecive.c  socket.c  terminal.c
cli/modules/headers/: config.h  globals.h  pdu.h  socket.h  terminal.h
client_modules/: alive.c  conexions.c  config.c  globals.c  pdu.c  register.c  sendrecive.c  socket.c  terminal.c
client_modules/headers/: alive.h  conexions.h  config.h  globals.h  pdu.h  register.h  sendrecive.h  socket.h  terminal.h
modules/: alive.c  conexions.c  config.c  globals.c  globals.h  pdu.c  register.c  sendrecive.c  socket.c  terminal.c
modules/headers/: conexions.h  config.h  pdu.h  terminal.h
moduls/: alive.c  conexions.c  pdu.c  register.c  sendrecive.c  socket.c  terminal.c
moduls/headers/: alive.h  globals.h  pdu.h  register.h  sendrecive.h
server_modules/: alive.py  conexions.py  config.py  constants.py  register.py  sendrecive.py  sockets.py  terminal.py
srv/: GHXE2LWQ6C.data  server.cfg  servidor.py
srv/modules/: alive.py  conexions.py  config.py  constants.py  globals.py  register.py  sendrecive.py  sockets.py  terminal.py
utilitats/: cfgloader.c  cfgloader.h  conexions.c  conexions.h  elemcontroller.c  elemcontroller.h
